[package]
name = "pipe-core"
version = "0.1.0"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.115"
assert-type-eq = "0.1.0"
serde = "1.0.111"
regex = "1.4.1"
serde_json = "1.0.60"
log = "0.4.14"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
rhai = {version= "1.5.0", features = ["default", "metadata"]}
snailquote = "0.3.1"

[features]
default = ["modules"]
modules = ["scripts"]
scripts = []

[lib]
name = "pipe_core"