[package]
name = "lab-parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest="2.1.3"
pest_derive="2.1.0"
serde_derive="1.0.130"
regex = "1.5.4"
uuid = {version="1.1.2", features=["v4"]}
escapade="0.0.3"

[features]
default = ["converters"]
full = ["default", "json", "comparators"]
json=[]
converters=[]
comparators=[]