[package]
name = "dispatcher"
version = "0.0.1"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lab-core = { path = "../../core", features = ["modules"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "dispatcher"
