[package]
name = "pipe_exit"
version = "0.0.1"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipe-core = { path = "../../core", features = ["modules"] }
regex = "1.4.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "exit"
